tests/baselines/reference/resolveModuleNameWithSameLetDeclarationName1.errors.txt
resolveModuleNameWithSameLetDeclarationName1.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== resolveModuleNameWithSameLetDeclarationName1.ts (1 errors) ====
    declare module foo {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
        interface Bar {
    
        }
    }
    
    let foo: foo.Bar; 